--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+:root {
+    --white: #e0e0e0;
+}
 html {
     font-family: 'VT323', monospace;
     background-color: rgb(10, 10, 10);
-    color: rgb(224, 224, 224);
+    color: var(--white);
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -9,4 +12,7 @@ html {
 main {
     display: flex;
     flex-direction: column;
+}
+a:visited {
+    color:var(--white);
 }
