--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
     flex-direction: row;
     flex-wrap: nowrap; 
     flex-flow is a shorthand for flex-direction and flex-wrap */
-    flex-flow: row nowrap;
-    justify-content: space-evenly; /*x*/
+    flex-flow: row nowrap; 
+    justify-content: center; /*x*/
     align-items: center; /*y*/
 }
 
@@ -41,7 +41,7 @@ body {
 
 .item.a {
     background-color: blue;
-    padding: 1% 1% 1% 20%;
+    padding: 1% 1% 1%;
     width: 30%;
 }
 
@@ -68,7 +68,7 @@ body {
 .item.c {
     background-color: green;
     margin: 5% 0;
-    width: 100%;
+    width: 70%;
 }
 
 .project-name {
