--- a/style.css
+++ b/style.css
@@ -80,14 +80,12 @@ body {
 }
 
 .img {
-    width: auto;
     margin: 0 auto;
-    object-fit: cover;
 }
 
 .img img {
-    width: 100%;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
 }
 
