--- a/style.css
+++ b/style.css
@@ -9,6 +9,34 @@
     text-transform: lowercase;
 }
 
+@media (prefers-color-scheme: light) {
+    :root {
+      --white: #0a0a0a;
+      --black: #e0e0e0;
+    }
+
+    a {
+      color: #0a0a0a;
+    }
+    a:hover {
+      background-color: #0a0a0a;
+      color: #e0e0e0;
+    }
+  
+    .item.b {
+      border-left: 3px solid var(--white); /* Dark line in light mode */
+    }
+  
+    @media screen and (max-width: 1079px), screen and (max-height: 719px) {
+      body {
+        background-color: var(--black) !important;
+      }
+      body::before {
+        color: var(--white);
+      }
+    }
+  }
+
 body {
     font-family: 'VT323', monospace;
     background-color: var(--black);
