--- a/style.css
+++ b/style.css
@@ -137,12 +137,12 @@ body {
 }
 
 a {
-    color: #e0e0e0;
+    color: var(--white)
 }
 
 a:hover {
-    background-color: #e0e0e0;
-    color: #0a0a0a;
+    background-color: var(--white);
+    color: var(--black)
 }
 
 @media screen and (max-width: 1079px), screen and (max-height: 719px) {
